[package]
name = "rust_miner"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
sha2 = "0.10"
hex = "0.4"
hostname = "0.3"
rand = "0.8"
rayon = "1.10"
lazy_static = "1.4"
# --- REMOVED: atomic_option was the wrong crate ---
# atomic_option = "0.1.2"

# --- ADDED FOR GPU SUPPORT ---
# This is the Rust wrapper for OpenCL
ocl = "0.19"

