[package]
name = "rust_miner"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
sha2 = "0.10"
hex = "0.4"
hostname = "0.3"
rand = "0.8"
rayon = "1.10"
lazy_static = "1.4"
rust-cuda = "0.3.1"
tui = "0.19"
crossterm = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
rust-cuda-nvcc = "0.1.7"
